Rename `UserOTELConfig` to `CommonOTELConfig`
