# docs/gen/config/controller/config-swagger.yaml
@@ -204,6 +204,19 @@ definitions:
     title: ClientTLSConfig is the config for client TLS.
     type: object
     x-go-package: github.com/fluxninja/aperture/pkg/net/tlsconfig
+  CommonOTELConfig:
+    properties:
+      batch_alerts:
+        $ref: '#/definitions/BatchAlertsConfig'
+      batch_postrollup:
+        $ref: '#/definitions/BatchPostrollupConfig'
+      batch_prerollup:
+        $ref: '#/definitions/BatchPrerollupConfig'
+      ports:
+        $ref: '#/definitions/PortsConfig'
+    title: CommonOTELConfig is the configuration for the OTEL collector.
+    type: object
+    x-go-package: github.com/fluxninja/aperture/pkg/otelcollector/config
   Duration:
     description: It holds *durationpb.Duration which is generated type for google/protobuf/duration.proto.
     title: Duration is encoded as a string message which represents a signed span
@@ -894,19 +907,6 @@ definitions:
     title: ServerTLSConfig holds configuration for setting up server TLS support.
     type: object
     x-go-package: github.com/fluxninja/aperture/pkg/net/tlsconfig
-  UserOTELConfig:
-    properties:
-      batch_alerts:
-        $ref: '#/definitions/BatchAlertsConfig'
-      batch_postrollup:
-        $ref: '#/definitions/BatchPostrollupConfig'
-      batch_prerollup:
-        $ref: '#/definitions/BatchPrerollupConfig'
-      ports:
-        $ref: '#/definitions/PortsConfig'
-    title: UserOTELConfig is the configuration for the OTEL collector.
-    type: object
-    x-go-package: github.com/fluxninja/aperture/pkg/otelcollector/config
   WatchdogConfig:
     properties:
       cgroup:
@@ -1020,7 +1020,7 @@ paths:
       - in: body
         name: proxy
         schema:
-          $ref: '#/definitions/UserOTELConfig'
+          $ref: '#/definitions/CommonOTELConfig'
       tags:
       - common-configuration
       x-fn-config-env: true
